--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,28 @@ server.servlet.context-path=/tmall_springboot
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
+#jpa对实体类的默认字段会把驼峰命名的属性，转换为字段名的时候自动加上下划线。 这个配置的作用就是去掉下划线
+#比如属性名称是 createDate, jpa 默认转换为字段名 create_Date。 有了这个配置之后，就会转换为同名字段 createDate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #显示 hibernate运行的 sql 语句
 spring.jpa.show-sql=true
+
+#Redis数据库索引（默认为0）
+spring.redis.database=0
+#Redis服务器地址
+spring.redis.host=127.0.0.1
+#Redis服务器连接端口
+spring.redis.port=6379
+#Redis服务器连接密码（默认为空）
+spring.redis.password=
+##连接池最大连接数（使用负值表示没有限制）
+#spring.redis.pool.max-active=10
+##连接池最大阻塞等待时间（使用负值表示没有限制）
+#spring.redis.pool.max-wait=-1
+##连接池中的最大空闲连接
+#spring.redis.pool.max-idle=8
+##连接池中的最小空闲连接
+#spring.redis.pool.min-idle=0
+#连接超时时间（毫秒）
+spring.redis.timeout=500
