--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,11 +33,11 @@ spring.jpa.show-sql=true
 #Redis数据库索引（默认为0）
 spring.redis.database=0
 #Redis服务器地址
-spring.redis.host=127.0.0.1
+spring.redis.host=101.37.172.245
 #Redis服务器连接端口
 spring.redis.port=6379
 #Redis服务器连接密码（默认为空）
-spring.redis.password=
+spring.redis.password=myredis
 ##连接池最大连接数（使用负值表示没有限制）
 #spring.redis.pool.max-active=10
 ##连接池最大阻塞等待时间（使用负值表示没有限制）
@@ -48,3 +48,8 @@ spring.redis.password=
 #spring.redis.pool.min-idle=0
 #连接超时时间（毫秒）
 spring.redis.timeout=500
+
+#ElasticSearch
+spring.data.elasticsearch.cluster-nodes = 101.37.172.245:9300
+#spring.data.elasticsearch.cluster-nodes =127.0.0.1:9300
+spring.data.elasticsearch.cluster-name=my-application
